added code to finalize semaphores in quantilenorm_cuda.

--- a/mex/Makefile
+++ b/mex/Makefile
@@ -1,6 +1,6 @@
 .SUFFIXES: .mexa64
 
-TARGET=mergesortfiles.mexa64 meanfiles.mexa64 sumfiles.mexa64 substituteToNormValues.mexa64 semaphore.mexa64 quantilenorm_cuda_init.mexa64 sumbinfiles.mexa64
+TARGET=mergesortfiles.mexa64 meanfiles.mexa64 sumfiles.mexa64 substituteToNormValues.mexa64 semaphore.mexa64 quantilenorm_cuda_init.mexa64 quantilenorm_cuda_final.mexa64 sumbinfiles.mexa64
 
 SOURCES := $(wildcard *.cpp)
 OBJS := $(SOURCES:.cpp=.o)
