--- a/mex/convn_cuda/tests/Makefile
+++ b/mex/convn_cuda/tests/Makefile
@@ -7,7 +7,7 @@
 GTEST_DIR = /mp/nas1/share/lib/googletest/googletest
 
 CPPFLAGS += -std=c++11 -isystem $(GTEST_DIR)/include
-CXXFLAGS += -g -Wall -Wextra -pthread
+CXXFLAGS += -g -Wall -Wextra -pthread -O3
 
 CUDA_INC = /usr/local/cuda/include
 CUDA_LIB = /usr/local/cuda/lib64
@@ -35,9 +35,8 @@ gtest_utils.o : gtest_utils.cpp $(GTEST_HEADERS)
 gtest_utils : gtest_utils.o
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(GTEST_DIR)/libgtest_main.a $(GTEST_DIR)/libgtest.a -lpthread $^ -o $@ -L$(UTILS_DIR) -lutils
 
-
 gtest_cudautils.o : gtest_cudautils.cpp $(GTEST_HEADERS)
-	nvcc $(CPPFLAGS) -I$(CUDAUTILS_DIR) -I$(SPDLOG_DIR) -c gtest_cudautils.cpp
+	$(CXX) $(CPPFLAGS) -I$(CUDAUTILS_DIR) -I$(SPDLOG_DIR) -c gtest_cudautils.cpp
 
-gtest_cudautils : gtest_cudautils.o
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $^ $(GTEST_DIR)/libgtest_main.a $(GTEST_DIR)/libgtest.a -lpthread -o $@ -L$(CUDAUTILS_DIR) -lcudautils -L$(CUDA_LIB) -lcudart -ltbb
+gtest_cudautils : $(CUDAUTILS_DIR)/convn.o gtest_cudautils.o
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $^ $(GTEST_DIR)/libgtest_main.a $(GTEST_DIR)/libgtest.a -lpthread -o $@ -L$(CUDA_LIB) -lcudnn -lcudart -ltbb
