--- a/mex/convn_cuda/Makefile
+++ b/mex/convn_cuda/Makefile
@@ -1,4 +1,4 @@
-TARGET=lib-cuda-utils convn_cuda.mexa64
+TARGET=lib-cuda-utils lib-tests # convn_cuda.mexa64
 
 #SOURCES := $(wildcard *.cpp)
 SOURCES := $(wildcard convn_*.cpp)
@@ -10,17 +10,21 @@ CUDA_LIB=/usr/local/cuda/lib64
 
 all: $(TARGET)
 
-convn_cuda.mexa64: $(OBJS) cuda-utils/libcudautils.a 
-	mex -output $@ $(OBJS) -L./cuda-utils -lcudautils -lmexutils -lutils -lmwgpu -L$(CUDA_LIB) -lcudart -ltbb
-	@cp -a convn_cuda.mexa64 ../
+#convn_cuda.mexa64: $(OBJS) cuda-utils/libcudautils.a 
+	#mex -output $@ $(OBJS) -L./cuda-utils -lcudautils -lmexutils -lutils -lmwgpu -L$(CUDA_LIB) -lcudart -ltbb
+	#@cp -a convn_cuda.mexa64 ../
 
-.cpp.o: $(SOURCES)
-	mex -c $< -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC)
+#.cpp.o: $(SOURCES)
+	#mex -c $< -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC)
 
 lib-cuda-utils:
 	make -C cuda-utils
 
+lib-tests:
+	make -C tests
+
 clean:
 	-rm *.mexa64 *.o
+	@make -C tests clean
 	@make -C cuda-utils clean
 
