fix small makefile issues

--- a/mex/convn_cuda/Makefile
+++ b/mex/convn_cuda/Makefile
@@ -24,7 +24,7 @@ lib-tests:
 	make -C tests
 
 lib-cudnn-utils:
-	make -C cudnn-utils
+	make -C cudnn-utils libcudnnutils.a
 
 clean:
 	-rm *.mexa64 *.o
