fix of templating i

--- a/mex/convn_cuda/Makefile
+++ b/mex/convn_cuda/Makefile
@@ -1,30 +1,29 @@
-TARGET=lib-cuda-utils lib-tests # convn_cuda.mexa64
+TARGET=lib-cuda-utils lib-cudnn-utils lib-tests convn_cuda.mexa64
 
-#SOURCES := $(wildcard *.cpp)
-SOURCES := $(wildcard convn_*.cpp)
+SOURCES := $(wildcard convn_cuda.cpp)
 OBJS := $(SOURCES:.cpp=.o)
 
 MATLAB_GPU_INC=/usr/local/MATLAB/R2017a/toolbox/distcomp/gpu/extern/include
 CUDA_INC=/usr/local/cuda/include
 CUDA_LIB=/usr/local/cuda/lib64
+CUDNN_DIR=cudnn-utils
 
 all: $(TARGET)
 
-#convn_cuda.mexa64: $(OBJS) cuda-utils/libcudautils.a 
-	#mex -output $@ $(OBJS) -L./cuda-utils -lcudautils -lmexutils -lutils -lmwgpu -L$(CUDA_LIB) -lcudart -ltbb
-	#@cp -a convn_cuda.mexa64 ../
+convn_cuda.mexa64: $(OBJS) $(CUDNN_DIR)/libcudnnutils.a
+	mex -outdir ../ -output $@ $(OBJS) $(CUDNN_DIR)/libcudnnutils.a -lmwgpu -L$(CUDA_LIB) -lcudart -ltbb
 
-#.cpp.o: $(SOURCES)
-	#mex -c $< -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC)
+.cpp.o: $(SOURCES)
+	mex -c $< -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC) -I$(CUDNN_DIR)
 
 lib-cuda-utils:
 	make -C cuda-utils
 
-lib-tests:
-	make -C tests
-
 lib-cudnn-utils:
 	make -C cudnn-utils libcudnnutils.a
+
+lib-tests:
+	make -C tests
 
 clean:
 	-rm *.mexa64 *.o
