--- a/mex/convn_cuda/tests/Makefile
+++ b/mex/convn_cuda/tests/Makefile
@@ -28,6 +28,7 @@ all : $(TESTS)
 
 clean :
 	rm -f $(TESTS) *.o
+	rm -f gtest_utils gtest_cudautils
 
 
 gtest_utils.o : gtest_utils.cpp $(GTEST_HEADERS)
@@ -40,4 +41,3 @@ gtest_cudautils.o : gtest_cudautils.cpp $(GTEST_HEADERS)
 	$(CXX) $(CPPFLAGS) -I$(CUDNNUTILS_DIR) -I$(CUDAUTILS_DIR) -I$(SPDLOG_DIR) -c gtest_cudautils.cpp
 
 gtest_cudautils : $(CUDAUTILS_DIR)/convn.o $(CUDNNUTILS_DIR)/libcudnnutils.a gtest_cudautils.o
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $^ $(GTEST_DIR)/libgtest_main.a $(GTEST_DIR)/libgtest.a -lpthread -o $@ $(CUDNNUTILS_DIR)/libcudnnutils.a -L$(CUDA_LIB) -lcudnn -lcudart -ltbb
