--- a/mex/convn_cuda/Makefile
+++ b/mex/convn_cuda/Makefile
@@ -1,4 +1,4 @@
-TARGET=lib-cuda-utils lib-cudnn-utils convn_cuda.mexa64 # lib-tests 
+TARGET=lib-cuda-utils lib-cudnn-utils convn_cuda.mexa64 convn_arrayfire.mexa64 convn_arrayfire_cuda.mexa64 # lib-tests 
 
 SOURCES := $(wildcard convn_cuda.cpp)
 OBJS := $(SOURCES:.cpp=.o)
@@ -13,9 +13,12 @@ all: $(TARGET)
 convn_cuda.mexa64: $(OBJS) $(CUDNN_DIR)/libcudnnutils.a
 	mex -compatibleArrayDims -outdir ../ -output $@ $(OBJS) $(CUDNN_DIR)/libcudnnutils.a -lmwgpu -L$(CUDA_LIB) -lcudart -lcudnn #-ltbb 
 
-convn_cuda.mexa64: convn_cuda.cpp
-	mex -compatibleArrayDims -outdir ../ -output $@ $(OBJS) $(CUDNN_DIR)/libcudnnutils.a -lmwgpu -L$(CUDA_LIB) -lcudart -lcudnn #-ltbb 
+convn_arrayfire_cuda.mexa64: convn_arrayfire_cuda.cpp
+	#mex -compatibleArrayDims -outdir ../ -output $@ $^ -I$(CUDA_INC) -I/usr/local/include -L$(CUDA_LIB) -lcudart -L/usr/local/lib -lafcuda
+	mex -compatibleArrayDims -outdir ../ -output $@ $^ -I$(CUDA_INC) -I/usr/local/include -L$(CUDA_LIB) -lcudart -L/usr/local/lib -laf -lafcuda
 
+convn_arrayfire.mexa64: convn_arrayfire.cpp
+	mex -g -compatibleArrayDims -outdir ../ -output $@ $^ -I/usr/local/include -L/usr/local/lib -lafcpu
 
 .cpp.o: $(SOURCES)
 	mex -compatibleArrayDims -c $< -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC) -I$(CUDNN_DIR)
@@ -32,6 +35,7 @@ lib-cudnn-utils:
 clean:
 	-rm *.mexa64 *.o
 	-rm ../convn_cuda.mexa64
+	-rm ../convn_arrayfire.mexa64
 	@make -C tests clean
 	@make -C cuda-utils clean
 	@make -C cudnn-utils clean
