connect GPU version to matlab via mex

--- a/mex/convn_cuda/Makefile
+++ b/mex/convn_cuda/Makefile
@@ -1,4 +1,4 @@
-TARGET=lib-cuda-utils lib-cudnn-utils convn_cuda.mexa64 convn_arrayfire.mexa64 convn_arrayfire_cuda.mexa64 # lib-tests 
+TARGET=lib-cufft-utils convn_cuda.mexa64 # lib-cuda-utils lib-cudnn-utils convn_arrayfire.mexa64 convn_arrayfire_cuda.mexa64 lib-tests 
 
 SOURCES := $(wildcard convn_cuda.cpp)
 OBJS := $(SOURCES:.cpp=.o)
@@ -7,27 +7,35 @@ MATLAB_GPU_INC=/usr/local/MATLAB/R2017a/toolbox/distcomp/gpu/extern/include
 CUDA_INC=/usr/local/cuda/include
 CUDA_LIB=/usr/local/cuda/lib64
 CUDNN_DIR=cudnn-utils
+CUFFT_DIR=cufft-utils
 
 all: $(TARGET)
 
-convn_cuda.mexa64: $(OBJS) $(CUDNN_DIR)/libcudnnutils.a
-	mex -compatibleArrayDims -outdir ../ -output $@ $(OBJS) $(CUDNN_DIR)/libcudnnutils.a -lmwgpu -L$(CUDA_LIB) -lcudart -lcudnn #-ltbb 
+convn_cuda.mexa64: $(OBJS) $(CUFFT_DIR)/libcufftutils.a
+	mex -compatibleArrayDims -outdir ../ -output $@ $(OBJS) $(CUFFT_DIR)/libcufftutils.a -lmwgpu -L$(CUDA_LIB) -I$(CUDA_INC) -lcufft -lcudart
 
-convn_arrayfire_cuda.mexa64: convn_arrayfire_cuda.cpp
+# convn_cuda.mexa64: $(OBJS) $(CUDNN_DIR)/libcudnnutils.a
+#	mex -compatibleArrayDims -outdir ../ -output $@ $(OBJS) $(CUDNN_DIR)/libcudnnutils.a -lmwgpu -L$(CUDA_LIB) -lcudart -lcudnn #-ltbb 
+
+#convn_arrayfire_cuda.mexa64: convn_arrayfire_cuda.cpp
 	#mex -compatibleArrayDims -outdir ../ -output $@ $^ -I$(CUDA_INC) -I/usr/local/include -L$(CUDA_LIB) -lcudart -L/usr/local/lib -lafcuda
-	mex -compatibleArrayDims -outdir ../ -output $@ $^ -I$(CUDA_INC) -I/usr/local/include -L$(CUDA_LIB) -lcudart -L/usr/local/lib -laf -lafcuda
+	#mex -compatibleArrayDims -outdir ../ -output $@ $^ -I$(CUDA_INC) -I/usr/local/include -L$(CUDA_LIB) -lcudart -L/usr/local/lib -laf -lafcuda
 
-convn_arrayfire.mexa64: convn_arrayfire.cpp
-	mex -g -compatibleArrayDims -outdir ../ -output $@ $^ -I/usr/local/include -L/usr/local/lib -lafcpu
+#convn_arrayfire.mexa64: convn_arrayfire.cpp
+	#mex -g -compatibleArrayDims -outdir ../ -output $@ $^ -I/usr/local/include -L/usr/local/lib -lafcpu
 
 .cpp.o: $(SOURCES)
-	mex -compatibleArrayDims -c $< -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC) -I$(CUDNN_DIR)
+	mex -compatibleArrayDims -c $< -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC) -I$(CUFFT_DIR)
+	#mex -compatibleArrayDims -c $< -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC) -I$(CUDNN_DIR)
 
-lib-cuda-utils:
-	make -C cuda-utils
+#lib-cuda-utils:
+#	make -C cuda-utils
 
-lib-cudnn-utils:
-	make -C cudnn-utils libcudnnutils.a
+lib-cufft-utils:
+	make -C cufft-utils
+
+#lib-cudnn-utils:
+#	make -C cudnn-utils libcudnnutils.a
 
 #lib-tests:
 	#make -C tests
@@ -35,8 +43,10 @@ lib-cudnn-utils:
 clean:
 	-rm *.mexa64 *.o
 	-rm ../convn_cuda.mexa64
-	-rm ../convn_arrayfire.mexa64
+	#-rm ../convn_cuda.mexa64
+	#-rm ../convn_arrayfire.mexa64
 	@make -C tests clean
-	@make -C cuda-utils clean
-	@make -C cudnn-utils clean
+	#@make -C cuda-utils clean
+	#@make -C cudnn-utils clean
+	@make -C cufft-utils clean
 
