--- a/mex/convn_cuda/cufft-utils/Makefile
+++ b/mex/convn_cuda/cufft-utils/Makefile
@@ -9,10 +9,10 @@ libcufftutils.a: $(OBJ)
 	ar crs $@ convn_impl.o
 
 %.o: %.cu
-	$(NVCC) $(NVCC_FLAGS) -o $@ $(CUFFTLIB) -c $^ 
+	$(NVCC) $(NVCC_FLAGS) -g -o $@ $(CUFFTLIB) -c $^ 
 
 main.exe: convn_impl.cu
-	$(NVCC) $(NVCC_FLAGS) $^ -o $@ $(CUFFTLIB)
+	$(NVCC) $(NVCC_FLAGS) $^ -g -o $@ $(CUFFTLIB)
 
 clean:
 	rm -rf *.o *.exe *.a
