--- a/mex/convn_cuda/Makefile
+++ b/mex/convn_cuda/Makefile
@@ -1,4 +1,4 @@
-TARGET=lib-cufft-utils lib-tests convn_cuda.o fft3_cuda.o convn_cuda.mexa64 fft3_cuda.mexa64 # lib-cuda-utils lib-cudnn-utils convn_arrayfire.mexa64 convn_arrayfire_cuda.mexa64 lib-tests 
+TARGET=lib-cufft-utils lib-tests convn_cuda.o convn_1GPU_cuda.o fft3_cuda.o convn_1GPU_cuda.mexa64 convn_cuda.mexa64 fft3_cuda.mexa64 # lib-cuda-utils lib-cudnn-utils convn_arrayfire.mexa64 convn_arrayfire_cuda.mexa64 lib-tests 
 
 SOURCES := $(wildcard convn_cuda.cpp fft3_cuda.cpp)
 OBJS := $(SOURCES:.cpp=.o)
@@ -14,6 +14,9 @@ all: $(TARGET)
 convn_cuda.mexa64: convn_cuda.o $(CUFFT_DIR)/libcufftutils.a
 	mex -compatibleArrayDims -outdir ../ -output $@ $^ $(CUFFT_DIR)/libcufftutils.a -lmwgpu -L$(CUDA_LIB) -I$(CUDA_INC) -lcufft -lcudart
 
+convn_1GPU_cuda.mexa64: convn_1GPU_cuda.o $(CUFFT_DIR)/libcufftutils.a
+	mex -compatibleArrayDims -outdir ../ -output $@ $^ $(CUFFT_DIR)/libcufftutils.a -lmwgpu -L$(CUDA_LIB) -I$(CUDA_INC) -lcufft -lcudart
+
 fft3_cuda.mexa64: fft3_cuda.o $(CUFFT_DIR)/libcufftutils.a
 	mex -compatibleArrayDims -outdir ../ -output $@ $^ $(CUFFT_DIR)/libcufftutils.a -lmwgpu -L$(CUDA_LIB) -I$(CUDA_INC) -lcufft -lcudart
 
@@ -21,6 +24,9 @@ fft3_cuda.o: fft3_cuda.cpp
 	mex -compatibleArrayDims -c $^ -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC) -I$(CUFFT_DIR)
 
 convn_cuda.o: convn_cuda.cpp
+	mex -compatibleArrayDims -c $^ -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC) -I$(CUFFT_DIR)
+
+convn_1GPU_cuda.o: convn_1GPU_cuda.cpp
 	mex -compatibleArrayDims -c $^ -I../include -I$(MATLAB_GPU_INC) -I$(CUDA_INC) -I$(CUFFT_DIR)
 
 lib-cufft-utils:
@@ -52,6 +58,7 @@ lib-tests:
 clean:
 	-rm *.mexa64 *.o
 	-rm ../convn_cuda.mexa64
+	-rm ../convn_1GPU_cuda.mexa64
 	-rm ../fft3_cuda.mexa64
 	@make -C tests clean
 	@make -C cufft-utils clean
